Report 2005: Add data, fix sorting in comp tables
Change-Id: Ib0c42f5b9fbd9b9f9ebf0bff437ef9d145e6ddda
Signed-off-by: Tibor Frank <tifrank@cisco.com>
(cherry picked from commit f278b55927de4aa59cf87ac1e752effd1c64035c)

--- a/resources/tools/presentation/specification.yaml
+++ b/resources/tools/presentation/specification.yaml
@@ -901,7 +901,9 @@
         - 62  # NDRPDR sel env 4
         - 63  # NDRPDR sel env 4
         - 64  # NDRPDR sel env 4
+        - 65  # NDRPDR sel env 4
         - 66  # NDRPDR sel env 4
+        - 70  # NDRPDR sel env 4
 
     vpp-performance-changes-2n-dnv-h1:
       csit-vpp-perf-verify-1908-2n-dnv:
@@ -2408,7 +2410,9 @@
       - 62  # NDRPDR sel env 4
       - 63  # NDRPDR sel env 4
       - 64  # NDRPDR sel env 4
+      - 65  # NDRPDR sel env 4
       - 66  # NDRPDR sel env 4
+      - 70  # NDRPDR sel env 4
       - 12  # MRR
       - 42  # Reconf
       - 45  # Reconf
