--- a/resources/tools/presentation/specification.yaml
+++ b/resources/tools/presentation/specification.yaml
@@ -813,7 +813,9 @@
       csit-vpp-perf-report-iterative-2005-3n-skx:
         - 42  # NDRPDR sel env 4
         - 43  # NDRPDR sel env 4
+        - 44  # NDRPDR sel env 4
         - 45  # NDRPDR sel env 4
+        - 47  # NDRPDR sel env 4
 
     vpp-performance-changes-2n-skx-h1:
       csit-vpp-perf-verify-1908_1-2n-skx:
@@ -856,8 +858,10 @@
         - 88  # NDRPDR sel env 4
         - 89  # NDRPDR sel env 4
         - 90  # NDRPDR sel env 4
+        - 91  # NDRPDR sel env 4
         - 92  # NDRPDR sel env 4
         - 93  # NDRPDR sel env 4
+        - 94  # NDRPDR sel env 4
 
 #    vpp-performance-changes-nfv-2n-skx-ref:
 #      csit-vpp-perf-verify-2001-2n-skx:
@@ -902,6 +906,8 @@
         - 64  # NDRPDR sel env 4
         - 65  # NDRPDR sel env 4
         - 66  # NDRPDR sel env 4
+        - 68  # NDRPDR sel env 4
+        - 69  # NDRPDR sel env 4
         - 70  # NDRPDR sel env 4
 
     vpp-performance-changes-2n-dnv-h1:
@@ -1014,6 +1020,7 @@
     vpp-performance-changes-3n-tsh-cmp-2:
       csit-vpp-perf-report-iterative-2005-3n-tsh:
         - 23  # NDRPDR sel env 4
+        - 25  # NDRPDR sel env 4
 
     vpp-soak-vs-ndr-2n-skx-ref:
       csit-vpp-perf-report-iterative-2005-2n-skx:
@@ -2270,7 +2277,9 @@
       - 41  # NDRPDR sel
       - 42  # NDRPDR sel env 4
       - 43  # NDRPDR sel env 4
+      - 44  # NDRPDR sel env 4
       - 45  # NDRPDR sel env 4
+      - 47  # NDRPDR sel env 4
       - 6   # MRR sel
     csit-vpp-perf-report-coverage-2005-3n-skx:
       - 10  # perf-full-3n-skx-crypto_I
@@ -2343,8 +2352,10 @@
       - 88  # NDRPDR sel env 4
       - 89  # NDRPDR sel env 4
       - 90  # NDRPDR sel env 4
+      - 91  # NDRPDR sel env 4
       - 92  # NDRPDR sel env 4
       - 93  # NDRPDR sel env 4
+      - 94  # NDRPDR sel env 4
       - 42  # MRR sel
       - 48  # Reconf
       - 50  # Reconf
@@ -2411,6 +2422,8 @@
       - 64  # NDRPDR sel env 4
       - 65  # NDRPDR sel env 4
       - 66  # NDRPDR sel env 4
+      - 68  # NDRPDR sel env 4
+      - 69  # NDRPDR sel env 4
       - 70  # NDRPDR sel env 4
       - 12  # MRR
       - 42  # Reconf
@@ -2480,6 +2493,7 @@
       - 14  # NDRPDR sel
       - 21  # NDRPDR sel
       - 23  # NDRPDR sel env 4
+      - 25  # NDRPDR sel env 4
       - 10  # MRR sel
 
     csit-vpp-perf-verify-1908-3n-dnv:
